# learning-cuda

./: .CONTEXT.md  .bazelignore  .bazeliskrc  .bazelrc  .clang-format  .clang-tidy  .clang-uml  .clangd  .dockerignore  .gitignore  .golangci.yml  BUILD  BUILD.bazel  CHANGELOG.md  CLAUDE.md  Caddyfile  DOCKER-QUICK-START.md  DOCKER.md  Dockerfile  Dockerfile.mock  MODULE.bazel  README-HTTPS.md  README.md  WORKSPACE.bazel  WORKSPACE.bazel.bak  buf.gen.backend.yaml  buf.gen.yaml  buf.yaml  bufgen.dockerfile  cloudflared-config.yml  config.yaml  dev.sh  docker-compose.dev.yml  docker-compose.go-cloud.yml  docker-compose.staging.yml  docker-compose.yml  go.mod  go.sum  otel-collector-config.yaml  traefik-config.yml  (+1 more)
.github/: README.md
proto/google/api/: BUILD.bazel
src/go_api/: BUILD.bazel  Dockerfile.build  Dockerfile.build.mock  Makefile  README.md  docker.sh
src/go_api/builder/: Dockerfile  Dockerfile.mock
src/go_api/cmd/server/: main.go
src/go_api/config/: config.yaml
src/go_api/pkg/app/: app.go  app_options.go  repositories.go  use_cases.go
src/go_api/pkg/application/: README.md  evaluate_feature_flag_use_case.go  evaluate_feature_flag_use_case_test.go  get_stream_config_use_case.go  get_stream_config_use_case_test.go  get_system_info_use_case.go  get_system_info_use_case_test.go  list_available_images_use_case.go  list_available_images_use_case_test.go  list_inputs_use_case.go  list_inputs_use_case_test.go  list_videos_use_case.go  list_videos_use_case_test.go  process_image_use_case.go  process_image_use_case_test.go  processor_capabilities_use_case.go  stream_video_use_case.go  stream_video_use_case_test.go  sync_feature_flags_use_case.go  sync_feature_flags_use_case_test.go  upload_image_use_case.go  upload_image_use_case_test.go  upload_video_use_case.go  video_playback_use_case.go
src/go_api/pkg/config/: config.go  config_test.go  mqtt_config.go  observability_config.go  processor_config.go  server_config.go  stream_config.go  tls_config.go
src/go_api/pkg/container/: container.go  repositories.go  use_cases.go
src/go_api/pkg/domain/: feature_flag.go  feature_flag_repository.go  image.go  image_repository.go  processing_options.go  video_player.go  video_repository.go
src/go_api/pkg/telemetry/: interceptors.go  trace_context.go  tracer.go
webserver/: BUILD.bazel  Dockerfile.build  Makefile  README.md  config.yaml  docker.sh
webserver/builder/: Dockerfile
webserver/cmd/server/: BUILD.bazel  main.go
webserver/config/: config.yaml
webserver/internal/app/: BUILD.bazel  app.go  config.go
webserver/internal/application/: BUILD.bazel  process_image_use_case.go
webserver/internal/config/: BUILD.bazel  config.go  feature_flag_manager.go  flipt_client.go  flipt_client_proxy.go  flipt_writer.go  observability_config.go
webserver/internal/container/: BUILD.bazel  container.go
webserver/internal/domain/: BUILD.bazel  image.go  processor.go
webserver/internal/infrastructure/http/: BUILD.bazel  client_proxy.go
webserver/internal/infrastructure/image/: BUILD.bazel  codec.go
webserver/internal/infrastructure/processor/: BUILD.bazel  cpp_connector.go
webserver/internal/interfaces/adapters/: BUILD.bazel  protobuf_adapter.go
webserver/internal/interfaces/connectrpc/: BUILD.bazel  config_handler.go  handler.go  interfaces.go  server.go
webserver/internal/interfaces/http/: BUILD.bazel  handler.go  trace_proxy.go  vite_manifest.go
webserver/internal/interfaces/static_http/: BUILD.bazel  asset_handler.go  asset_manifest.go  flipt_handler.go  handler.go  production_handler.go  vite_manifest.go  websocket_handler.go
webserver/internal/interfaces/websocket/: BUILD.bazel  handler.go
webserver/internal/telemetry/: BUILD.bazel  interceptors.go  trace_context.go  tracer.go
webserver/pkg/app/: BUILD.bazel  app.go
webserver/pkg/application/: BUILD.bazel  evaluate_feature_flag_use_case.go  evaluate_feature_flag_use_case_test.go  get_stream_config_use_case.go  get_stream_config_use_case_test.go  get_system_info_use_case.go  get_system_info_use_case_test.go  list_available_images_use_case_test.go  list_inputs_use_case.go  list_inputs_use_case_test.go  list_videos_use_case.go  list_videos_use_case_test.go  process_image_use_case.go  process_image_use_case_test.go  processor_capabilities_use_case.go  sync_feature_flags_use_case.go  sync_feature_flags_use_case_test.go  upload_image_use_case.go  upload_image_use_case_test.go  upload_video_use_case.go  upload_video_use_case_test.go  video_playback_use_case.go
webserver/pkg/config/: BUILD.bazel  config.go  config_test.go  logger_config.go  observability_config.go  processor_config.go  server_config.go  stream_config.go  tls_config.go
webserver/pkg/container/: BUILD.bazel  container.go
webserver/pkg/domain/: BUILD  BUILD.bazel  device_status.go  image.go  image_repository.go  processing_options.go  processor.go  system_info.go
webserver/pkg/domain/interfaces/: mqtt_device_monitor.go  processor_repository.go  version_repository.go
webserver/pkg/infrastructure/config/: config_repository.go
webserver/pkg/infrastructure/featureflags/: BUILD.bazel  flipt_client_proxy.go  flipt_client_proxy_test.go  flipt_http_api.go  flipt_http_api_test.go  flipt_repository.go  flipt_repository_test.go  flipt_writer.go
webserver/pkg/infrastructure/filesystem/: BUILD  static_image_repository.go  static_image_repository_test.go
webserver/pkg/infrastructure/http/: BUILD.bazel  client_proxy.go  factory.go
webserver/pkg/infrastructure/image/: BUILD.bazel  codec.go
webserver/pkg/infrastructure/logger/: BUILD  logger.go  otlp_writer.go
webserver/pkg/infrastructure/mqtt/: client.go  device_monitor.go
webserver/pkg/telemetry/: BUILD.bazel  tracer.go
webserver/web/: .env.development  .env.production  .env.staging  .eslintrc.json  .gitignore  .prettierignore  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.base.json  tsconfig.json  vite.config.ts  vitest.config.ts
webserver/web/src/: main.ts  test-setup.ts  vite-env.d.ts
webserver/web/templates/: BUILD.bazel  index.html  react.html
(+1692 files in other folders)
