load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# Export templates and static files for use as data
exports_files([
    "web/templates/index.html",
    "web/static/css/main.css",
])

# Vite build outputs
filegroup(
    name = "vite_dist",
    srcs = glob([
        "web/static/js/dist/**/*.js",
        "web/static/js/dist/**/*.json",
    ]),
    visibility = ["//visibility:public"],
)

# Package server binary and data files for Docker
# Note: Go server is built with standard Go toolchain (make build), not Bazel
# This target is not used in the main Dockerfile build process
pkg_tar(
    name = "server_layer",
    srcs = [],
    package_dir = "/app",
)

pkg_tar(
    name = "data_layer",
    srcs = [
        "web/templates/index.html",
        "//data:static_images/lena.png",
        "//data:static_images/mandrill.png",
        "//data:static_images/peppers.png",
        "//data:static_images/barbara.png",
    ],
    package_dir = "/app",
)

# Docker image configuration
oci_image(
    name = "server_image",
    base = "@distroless_base",
    entrypoint = ["/app/server_/server"],
    tars = [
        ":server_layer",
        ":data_layer",
    ],
    workdir = "/app",
)

# Load image into Docker daemon with 'bazel run'
oci_load(
    name = "server_load",
    image = ":server_image",
    repo_tags = ["cuda-webserver:latest"],
)
