load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# Frontend is built separately in front-end/ (Vite + Nginx). This package only tracks optional OCI experiments.

# Package server binary and data files for Docker
# Note: Go server is built with standard Go toolchain (make build), not Bazel
pkg_tar(
    name = "server_layer",
    srcs = [],
    package_dir = "/app",
)

pkg_tar(
    name = "data_layer",
    srcs = [
        "//data:static_images/lena.png",
        "//data:static_images/mandrill.png",
        "//data:static_images/peppers.png",
        "//data:static_images/barbara.png",
    ],
    package_dir = "/app",
)

oci_image(
    name = "server_image",
    base = "@distroless_base",
    entrypoint = ["/app/server_/server"],
    tars = [
        ":server_layer",
        ":data_layer",
    ],
    workdir = "/app",
)

oci_load(
    name = "server_load",
    image = ":server_image",
    repo_tags = ["cuda-webserver:latest"],
)
