load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/jrb/cuda-learning/webserver/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//webserver/internal/app",
        "//webserver/internal/application",
        "//webserver/internal/infrastructure/processor",
        "//webserver/internal/telemetry",
    ],
)

go_binary(
    name = "server",
    data = [
        "//data:lena.png",
        "//webserver:vite_dist",
        "//webserver:web/static/css/main.css",
        "//webserver:web/templates/index.html",
    ],
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
