load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "app",
    srcs = [
        "app.go",
    ],
    importpath = "github.com/jrb/cuda-learning/webserver/internal/app",
    visibility = ["//webserver:__subpackages__"],
    deps = [
        "//webserver/internal/application",
        "//webserver/internal/config",
        "//webserver/internal/infrastructure/http",
        "//webserver/internal/interfaces/connectrpc",
        "//webserver/internal/interfaces/http",
        "//webserver/internal/interfaces/static_http",
        "//webserver/internal/telemetry",
        "@com_connectrpc_connect//:connect",
        "@io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp//:otelhttp",
    ],
)
