load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = [
        "config.go",
        "flipt_writer.go",
    ],
    importpath = "github.com/jrb/cuda-learning/webserver/internal/config",
    visibility = ["//webserver:__subpackages__"],
    deps = [
        "@com_github_spf13_viper//:viper",
        "@io_flipt_go_flipt_client//:flipt-client",
    ],
)
