load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "app",
    srcs = [
        "app.go",
    ],
    importpath = "github.com/jrb/cuda-learning/webserver/pkg/app",
    visibility = ["//webserver:__subpackages__"],
    deps = [
        "//webserver/pkg/application",
        "//webserver/pkg/config",
        "//webserver/pkg/infrastructure/http",
        "//webserver/pkg/infrastructure/logger",
        "//webserver/pkg/interfaces/connectrpc",
        "//webserver/pkg/interfaces/http",
        "//webserver/pkg/interfaces/static_http",
        "//webserver/pkg/telemetry",
        "@com_connectrpc_connect//:connect",
        "@io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp//:otelhttp",
    ],
)
