load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "application",
    srcs = [
        "evaluate_feature_flag_use_case.go",
        "get_stream_config_use_case.go",
        "process_image_use_case.go",
        "sync_feature_flags_use_case.go",
    ],
    importpath = "github.com/jrb/cuda-learning/webserver/pkg/application",
    visibility = ["//webserver:__subpackages__"],
    deps = [
        "//webserver/pkg/config",
        "//webserver/pkg/domain",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)
