load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = [
        "config.go",
        "observability_config.go",
        "server_config.go",
        "stream_config.go",
        "tls_config.go",
    ],
    importpath = "github.com/jrb/cuda-learning/webserver/pkg/config",
    visibility = ["//webserver:__subpackages__"],
    deps = [
        "@com_github_spf13_viper//:viper",
    ],
)
