load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "container",
    srcs = ["container.go"],
    importpath = "github.com/jrb/cuda-learning/webserver/pkg/container",
    visibility = ["//webserver:__subpackages__"],
    deps = [
        "//webserver/pkg/application",
        "//webserver/pkg/config",
        "//webserver/pkg/domain",
        "//webserver/pkg/infrastructure/featureflags",
        "//webserver/pkg/infrastructure/http",
        "@io_flipt_go_flipt_client//:flipt-client",
    ],
)

