load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "domain",
    srcs = [
        "feature_flag.go",
        "feature_flag_repository.go",
        "image.go",
        "processor.go",
    ],
    importpath = "github.com/jrb/cuda-learning/webserver/pkg/domain",
    visibility = ["//webserver:__subpackages__"],
)
