load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "telemetry",
    srcs = [
        "interceptors.go",
        "trace_context.go",
        "tracer.go",
    ],
    importpath = "github.com/jrb/cuda-learning/webserver/pkg/telemetry",
    visibility = ["//webserver:__subpackages__"],
    deps = [
        "//proto/gen",
        "//webserver/pkg/config",
        "@com_connectrpc_connect//:connect",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//codes",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc//:otlptracegrpc",
        "@io_opentelemetry_go_otel_sdk//resource",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)

