load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "http",
    srcs = ["client_proxy.go"],
    importpath = "github.com/jrb/cuda-learning/webserver/internal/infrastructure/http",
    visibility = ["//webserver:__subpackages__"],
    deps = [
        "@io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp//:otelhttp",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//codes",
    ],
)

