load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "processor",
    srcs = ["cpp_connector.go"],
    cdeps = ["//cpp_accelerator/ports/cgo:cgo_api"],
    cgo = True,
    importpath = "github.com/jrb/cuda-learning/webserver/internal/infrastructure/processor",
    visibility = ["//webserver:__subpackages__"],
    deps = [
        "//proto/gen",
        "//webserver/internal/domain",
        "@org_golang_google_protobuf//proto",
    ],
)
