load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "adapters",
    srcs = ["protobuf_adapter.go"],
    importpath = "github.com/jrb/cuda-learning/webserver/internal/interfaces/adapters",
    visibility = ["//webserver:__subpackages__"],
    deps = [
        "//proto/gen",
        "//webserver/internal/domain",
    ],
)

