load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "connectrpc",
    srcs = [
        "config_handler.go",
        "handler.go",
        "server.go",
    ],
    importpath = "github.com/jrb/cuda-learning/webserver/internal/interfaces/connectrpc",
    visibility = ["//webserver:__subpackages__"],
    deps = [
        "//proto/gen",
        "//proto/gen/genconnect",
        "//webserver/internal/application",
        "//webserver/internal/config",
        "//webserver/internal/domain",
        "@com_connectrpc_connect//:connect",
    ],
)
