load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "static_http",
    srcs = [
        "handler.go",
        "vite_manifest.go",
        "websocket_handler.go",
    ],
    importpath = "github.com/jrb/cuda-learning/webserver/internal/interfaces/static_http",
    visibility = ["//webserver:__subpackages__"],
    deps = [
        "//proto/gen",
        "//webserver/internal/config",
        "//webserver/internal/interfaces/connectrpc",
        "@com_connectrpc_connect//:connect",
        "@com_github_gorilla_websocket//:websocket",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
    ],
)
