load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "static_http",
    srcs = [
        "asset_handler.go",
        "asset_manifest.go",
        "development_handler.go",
        "handler.go",
        "production_handler.go",
        "websocket_handler.go",
    ],
    importpath = "github.com/jrb/cuda-learning/webserver/internal/interfaces/static_http",
    visibility = ["//webserver:__subpackages__"],
    deps = [
        "//proto/gen",
        "//webserver/internal/config",
        "//webserver/internal/interfaces/connectrpc",
        "@com_connectrpc_connect//:connect",
        "@com_github_gorilla_websocket//:websocket",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
    ],
)
