load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "featureflags",
    srcs = [
        "flipt_client.go",
        "flipt_client_proxy.go",
        "flipt_http_api.go",
        "flipt_repository.go",
        "flipt_writer.go",
    ],
    importpath = "github.com/jrb/cuda-learning/webserver/pkg/infrastructure/featureflags",
    visibility = ["//visibility:public"],
    deps = [
        "//webserver/pkg/domain",
        "//webserver/pkg/infrastructure/logger",
        "@io_flipt_go_flipt_client//:flipt-client",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//codes",
    ],
)

