load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "adapters",
    srcs = ["protobuf_adapter.go"],
    importpath = "github.com/jrb/cuda-learning/webserver/pkg/interfaces/adapters",
    visibility = ["//webserver:__subpackages__"],
    deps = [
        "//proto/gen",
        "//webserver/pkg/domain",
    ],
)

