load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "connectrpc",
    srcs = [
        "config_handler.go",
        "handler.go",
        "interfaces.go",
        "server.go",
    ],
    importpath = "github.com/jrb/cuda-learning/webserver/pkg/interfaces/connectrpc",
    visibility = ["//webserver:__subpackages__"],
    deps = [
        "//proto/gen",
        "//proto/gen/genconnect",
        "//webserver/pkg/application",
        "//webserver/pkg/config",
        "//webserver/pkg/interfaces/adapters",
        "@com_connectrpc_connect//:connect",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)
