load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "static_http",
    srcs = [
        "asset_handler.go",
        "asset_manifest.go",
        "development_handler.go",
        "handler.go",
        "production_handler.go",
    ],
    importpath = "github.com/jrb/cuda-learning/webserver/pkg/interfaces/static_http",
    visibility = ["//webserver:__subpackages__"],
    deps = [
        "//webserver/pkg/application",
        "//webserver/pkg/config",
        "//webserver/pkg/infrastructure/http",
        "//webserver/pkg/interfaces/websocket",
    ],
)
