load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "websocket",
    srcs = [
        "config_provider.go",
        "handler.go",
    ],
    importpath = "github.com/jrb/cuda-learning/webserver/pkg/interfaces/websocket",
    visibility = ["//webserver:__subpackages__"],
    deps = [
        "//proto/gen",
        "//webserver/pkg/application",
        "//webserver/pkg/config",
        "//webserver/pkg/domain",
        "//webserver/pkg/infrastructure/image",
        "//webserver/pkg/infrastructure/logger",
        "//webserver/pkg/interfaces/adapters",
        "//webserver/pkg/telemetry",
        "@com_github_gorilla_websocket//:websocket",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
    ],
)

